Correct placeholder contrast for firefox

--- a/LearningHub.Nhs.WebUI/Styles/nhsuk/layout.scss
+++ b/LearningHub.Nhs.WebUI/Styles/nhsuk/layout.scss
@@ -104,6 +104,10 @@
 .nhsuk-header__search {
     .nhsuk-search__input {
         width: px2rem(260);
+
+        &::-moz-placeholder {
+            opacity: 1;
+        }
     }
 
     #search > label.nhsuk-u-visually-hidden {
